# count-fasta-plots

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: main.rs
