[package]
name = "count-fasta-plots"
version = "0.1.3"
edition = "2021"
repository="https://github.com/jovillarrealm/count-fasta-plots"



[dependencies]
plotters = "0.3"
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
statistical = "1.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

